bundled_metadata/force-app/main/default/objects/Order_Event__e/Order_Event__e.object-meta.xml
<CustomObject>
    <label>Order Event</label>
    <pluralLabel>Order Events</pluralLabel>
</CustomObject>