bundled_metadata/force-app/main/default/objects/Order_Event__e/fields/Order_Ids__c.field-meta.xml
<CustomField>
    <fullName>Order_Ids__c</fullName>
    <label>Order Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>