bundled_metadata/force-app/main/default/objects/Order_Event__e/fields/Wholesaler_Id__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Id__c</fullName>
    <label>Wholesaler Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>