bundled_metadata/force-app/main/default/objects/Order_Event__e/fields/Wholesaler_Name__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Name__c</fullName>
    <label>Wholesaler Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>